# elfmem

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  QUICKSTART.md  README.md  SECURITY.md  SETUP_QUICK_FIX.md  SIMULATION_OVERVIEW.md  START_HERE.md  alembic.ini  index.html  mkdocs.yml  pyproject.toml  release-please-config.json  sitemap.xml
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  release-please.yml
CLAUDE_CODE_INTEGRATION/: index.html
MULTIPLE_MCP_QUICK_REFERENCE/: index.html
SETUP_AND_CONFIG/: index.html
agent_friendly_principles/: index.html
agent_usage_patterns_guide/: index.html
alembic/: env.py
amgs_architecture/: index.html
benchmark_locomo_team_prompt/: index.html
benchmarks/locomo/: adapter.py  baselines.py  config.py  data.py  metrics.py  report.py  runner.py
benchmarks/memoryagentbench/: adapter.py  config.py  metrics.py  runner.py
benchmarks/shared/: answerer.py
claude_teams_guide/: index.html
cognitive_loop_operations_guide/: index.html
design_simulation_guide/: index.html
dev_setup/: index.html
docs/: CLAUDE_CODE_INTEGRATION.md  DREAMING_IMPLEMENTATION_SUMMARY.md  MCP_DOCUMENTATION_INDEX.md  MCP_SERVER_SETUP.md  MULTIPLE_MCP_QUICK_REFERENCE.md  SETUP_AND_CONFIG.md  SETUP_COMPLETE.md  agent_friendly_principles.md  agent_usage_patterns_guide.md  amgs_architecture.md  amgs_instructions.md  benchmark_locomo_team_prompt.md  brainstorm_adaptive_intelligence.md  brainstorm_outcome_feedback.md  claude_teams_guide.md  coding_principles.md  cognitive_loop_operations_guide.md  design_simulation_guide.md  design_simulation_quick_ref.md  dev_setup.md  dreaming_architecture.md  elfmem_tool.md  graph_connect_design.md  graph_improvement_research.md  index.md  multiple_mcp_steps.md  note_elfmem_tom_blocks.md  note_elfmem_trading_example.md  note_team_steps.md  notes.md  operationalize_cognitive_loop.md  prompt_ab_testing.md  prompt_team_01.md  quickstart.md  research_agent_patterns.md  simulation_behaviour_research.md  testing_principles.md  visualisation_research.md
docs/guides/: benchmark_report_spec.md  benchmark_strategy.md  locomo_benchmark_guide.md  longmemeval_benchmark_guide.md  memoryagentbench_guide.md
docs/plans/: README.md  hebbian_agent_simulation.md  learnedmembench_adapter.md  locomo_optimisation_plan.md  plan_agent_communication_v1.md  plan_agent_friendly_refactor.md  plan_cog_loop.md  plan_consolidate_summary.md  plan_contradiction_detection_band.md  plan_db_locking.md  plan_deep_sleep_rescoring.md  plan_dreaming_architecture.md  plan_elfmem_init.md  plan_elfmem_optimise.md  plan_embedding_lock.md  plan_graph_composite_scoring.md  plan_graph_connect.md  plan_graph_hebbian.md  plan_graph_temporal_decay.md  plan_logging_strategy.md  plan_mind_block_improvements.md  plan_opensource_refactor.md  plan_outcome_scoring.md  plan_peer_inbox_trigger.md  plan_penalize.md  plan_project_init.md  plan_smart_mcp_cli.md  plan_token_usage_tracking.md  plan_visualisation.md  simulation_graph_temporal_decay.md  step_03_schema_storage.md  step_04_mock_adapters.md  step_05_learn_consolidate.md  step_06_recall_frame.md  step_07_curate.md  step_08_real_adapters.md  step_09_config_factory.md
dreaming_architecture/: index.html
elfmem_tool/: index.html
examples/: agent_discipline.md  calibrating_agent.py  decision_maker.py  simulation_calibration.md  simulation_research_synthesis.md  test_calibrating_agent.py  test_decision_maker.py
graph_connect_design/: index.html
graph_improvement_research/: index.html
guides/benchmark_report_spec/: index.html
guides/benchmark_strategy/: index.html
guides/locomo_benchmark_guide/: index.html
guides/longmemeval_benchmark_guide/: index.html
guides/memoryagentbench_guide/: index.html
multiple_mcp_steps/: index.html
note_elfmem_tom_blocks/: index.html
operationalize_cognitive_loop/: index.html
plans/learnedmembench_adapter/: index.html
quickstart/: index.html
research_agent_patterns/: index.html
scripts/: README.md  learn_agent_patterns.py  learn_cognitive_loop_operations.py  learn_sim_concepts.py  seed_self.py  seed_team_memory.py  simulate_consolidation_policy.py  visualise.py
search/: search_index.json
sim/: EXPLORATIONS.md  README.md
sim/explorations/: 013_edges.md  (+27 more)
simulation_behaviour_research/: index.html
site/: index.html  sitemap.xml
tests/: CLAUDE.md  conftest.py  test_adaptive_intelligence.py  test_agent_api.py  test_agent_identity_section.py  test_backup_validation.py  test_bm25_retrieval.py  test_cli.py  test_co_retrieval_staging.py  test_cog_loop.py  test_cold_start_centrality.py  test_connect.py  test_consolidation_optimization.py  test_consolidation_policy.py  test_contradictions_surface.py  test_curate.py  test_db_locking.py  test_decisions.py  test_doc_render_from_config.py  test_dreaming_architecture.py  test_edge_scoring.py  test_embedding_lock.py  test_establishment.py  test_extract_json.py  test_hebbian.py  test_learn_document.py  test_lifecycle.py  test_logging.py  test_mcp.py  test_mcp_migrate.py  test_migrate.py  test_migrate_embeddings.py  test_mind.py  test_mock_adapters.py  test_outcome.py  test_peer.py  test_peer_inbox_status.py  test_phase1.py  test_phase2.py  test_phase3.py  (+11 more)
visualisation_research/: index.html
(+121 files in other folders)
