[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elfmem"
version = "0.1.0"
description = "Self-aware adaptive memory for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.0",
    "numpy>=1.26",
    "litellm>=1.30",
    "instructor>=1.2",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML",
]

[tool.hatch.build.targets.wheel]
packages = ["src/elfmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["elfmem"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
