[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elfmem"
version = "0.1.0"
description = "Self-aware adaptive memory for LLM agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "emson" }]
keywords = ["memory", "llm", "agents", "rag", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.0",
    "numpy>=1.26",
    "litellm>=1.30",
    "instructor>=1.2",
    "pyyaml>=6.0",
    "greenlet>=3.3.2",
]

[project.urls]
Homepage = "https://github.com/emson/elfmem"
Repository = "https://github.com/emson/elfmem"
Issues = "https://github.com/emson/elfmem/issues"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
cli = ["typer>=0.12"]
tools = ["fastmcp>=2.0", "typer>=0.12"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML",
    "fastmcp>=2.0",
    "typer>=0.12",
]

[project.scripts]
elfmem = "elfmem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elfmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["elfmem"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
