[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elfmem"
version = "0.5.1"
description = "Adaptive memory for LLM agents — adaptive decay, knowledge graph, zero infrastructure"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Ben Emson", email = "ben@emson.co.uk" }
]
maintainers = [
    { name = "Ben Emson", email = "ben@emson.co.uk" }
]
keywords = [
    "memory", "llm", "agents", "rag", "sqlite",
    "adaptive", "cognitive", "mcp", "knowledge-graph",
    "autonomous-agents", "anthropic", "openai", "embeddings",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "sqlalchemy>=2.0",
    "aiosqlite>=0.19",
    "alembic>=1.13",
    "pydantic>=2.0",
    "numpy>=1.26",
    "openai>=1.50,<3.0",
    "anthropic>=0.40,<1.0",
    "pyyaml>=6.0",
    "greenlet>=3.0",
]

[project.urls]
Homepage = "https://github.com/emson/elfmem"
Documentation = "https://emson.github.io/elfmem"
Repository = "https://github.com/emson/elfmem"
Issues = "https://github.com/emson/elfmem/issues"
Changelog = "https://github.com/emson/elfmem/blob/main/CHANGELOG.md"
Security = "https://github.com/emson/elfmem/blob/main/SECURITY.md"

[project.optional-dependencies]
mcp = ["fastmcp>=2.0"]
cli = ["typer>=0.12"]
tools = ["fastmcp>=2.0", "typer>=0.12"]
viz = ["jinja2>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "types-PyYAML",
    "fastmcp>=2.0,<4.0",
    "typer>=0.12",
    "jinja2>=3.1",
    "mkdocs-material>=9.0",
    "mkdocs-autorefs>=0.5",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
elfmem = "elfmem.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/elfmem"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["elfmem"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
